--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -54,4 +54,5 @@ repos:
     rev: v1.19.1
     hooks:
       - id: mypy
-        additional_dependencies: []
+        additional_dependencies:
+          - types-requests
